tests/requests/invalid/chunked_07.py
from gunicorn.http.errors import InvalidHeaderName

cfg.set("header_map", "refuse")

request = InvalidHeaderName
